--- a/bkt/DESCRIPTION
+++ b/bkt/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: bkt
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Baysian Knowlegde Tracing (BKT)
+Version: 1.0
+Author: MRT
+Maintainer: The package maintainer <tuanhcmup@gmail.com>
+Description: A collection of tools helps you to work with BKT model
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports:
+    dplyr,
+    data.table
